--- a/Excel Adaptacion_v1/excel.html
+++ b/Excel Adaptacion_v1/excel.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adaptacion</title>
 </head>
-<body style="background-color:#1b3c4c;">
-    <table style="background-color: dimgray;"border="1">
+<body style="background-color:#85fa73;">
+    <table style="background-color: rgb(219, 252, 242)" border="1">
         <thead>
             <tr>
                 <th>Responsable</th>
@@ -18,11 +18,11 @@
                 <th>Ejemplo</th>
             </tr>
         </thead>
-        <tbody">
+        <tbody>
             <tr>
                 <td>Alexander Stephen Moreno Rodriguez</td>
                 <td>&lt;applet&gt;</td>
-                <td>No aplica</td>
+                <td><center>No aplica</center></td>
                 <td>Un applet es un programa, componente o aplicación que se ejecuta dentro del contexto de otro programa o aplicación escrito en JAVA.</td>
                 <td>&lt;object&gt;</td>
                 <td><img src="resources/object.png" alt="Ejemploxd"></td>
@@ -31,7 +31,7 @@
             <tr>
                 <td>Andrés Felipe Pardo Hernández</td>
                 <td>&lt;acronym&gt;</td>
-                <td>No aplica</td>
+                <td><center>No aplica</center></td>
                 <td>Se utilizaba en HTML para definir un acronimo o abreviar palabras en el contenido web </td>
                 <td>&lt;abbr&gt;</td>
                 <td><img src="resources/abbr.png" alt="abbr.img"></td>
@@ -40,7 +40,7 @@
             <tr>
                 <td>Angie Nathalia Cárdenas Pinzón</td>
                 <td>&lt;bgsound&gt;</td>
-                <td>No aplica</td>
+                <td><center>No aplica</center></td>
                 <td>Incorpora sonidos de fondo que se ejecuta cuando se entra a la pagina. Solo es interpretada por Internet Explorer. Acepta formatos Mp3, MID, AU y WAV. <audio> No se reproduce solo, se necesita que el usuario oprima play con el controls que se agrega a la etiqueta y  pasa con el preload y que cargue el archivo de audio.</td>
                 <td>&lt;audio&gt, No funciona sin atributos de control, controls, autoplay y preload.</td>
                 <td><img src="resources/audio.png" alt="audio.img"></td>
@@ -49,10 +49,10 @@
             <tr>
                 <td>Angie Tatiana Duran Leon</td>
                 <td>&lt;dir&gt;</td>
-                <td>No aplica</td>
+                <td><center>No aplica</center></td>
                 <td>La etiqueta &lt;dir&gt; era una etiqueta obsoleta en HTML que se utilizaba para 
                     crear una lista de elementos de directorio. Cada elemento en la lista representaba
-                     un ítem dentro de un directorio, como una carpeta en un sistema de archivos</td>
+                    un ítem dentro de un directorio, como una carpeta en un sistema de archivos</td>
                 <td>actualmente se recomienda utilizar &lt;ul&gt&lt;/ul&gt; listas no ordenadas y &lt;ol&gt&lt;/ol&gt; listas ordenadas junto con
                     &lt;li&gt; que es el elemento de la lista</td>
                 <td><img src="resources/ulol.png" alt="ulol.png"></td>
@@ -61,7 +61,7 @@
             <tr>
                 <td>Cristian Camilo Pardo Hernandez</td>
                 <td>&lt;frameset&gt;</td>
-                <td>No aplica</td>
+                <td><center>No aplica</center></td>
                 <td>Los marcos (frames) son áreas separadas y ajustables dentro de una página web
                     donde se pueden cargar diferentes documentos HTML.</td>
                 <td>CSS Grid o &lt;div&gt;</td>
@@ -71,7 +71,7 @@
             <tr>
                 <td>Daniel Felipe Rincon Guerrero</td>
                 <td>&lt;noframes&gt;</td>
-                <td>No aplica</td>
+                <td><center>No aplica</center></td>
                 <td>Se usó en HTML 4 para actuar como una etiqueta alternativa para los navegadores que no admitían marcos.</td>
                 <td>NO APLICA</td>
                 <td><img src="resources/noFrames.png" alt="noFrames.png"></td>
@@ -79,9 +79,9 @@
 
             <tr>
                 <td>David Andrés Santos Mosquera</td>
+                <td><center>No aplica</center></td>
                 <td>&lt;hgroup&gt;</td>
-                <td>No aplica</td>
-                <td>El elemento hgroup representa al bloque de encabezado de una sección y usualmente agrupa encabezados consecutivos (h1 a h6). Un encabezado de niveles múltiples puede ser usado para proveer subtítulos, títulos alternativos o eslóganes.</td>
+                <td><center>El elemento hgroup representa al bloque de encabezado de una sección y usualmente agrupa encabezados consecutivos (h1 a h6). Un encabezado de niveles múltiples puede ser usado para proveer subtítulos, títulos alternativos o eslóganes.</center></td>
                 <td>&ltdiv class="container"&gt;</td>
                 <td><img src="resources/container.png" alt="container.png"></td>
             </tr>
@@ -89,7 +89,7 @@
             <tr>
                 <td>Edgar Mauricio Pinzón Monsalve</td>
                 <td>&lt;isindex&gt;</td>
-                <td>No aplica</td>
+                <td><center>No aplica</center></td>
                 <td>Esta etiqueta se utilizaba para insertar un input de texto , y lo que escribes es buscado en el html</td>
                 <td>se usa la etiqueta &lt;input&gt; que debe estar dentro de la etiqueta &lt;form&gt;</td>
                 <td><img src="resources/form.png" alt="form.png"></td>
@@ -98,7 +98,7 @@
             <tr>
                 <td>Jaider Steveen Mendoza Cardona</td>
                 <td>&lt;listing&gt;,&lt;xmp&gt;</td>
-                <td>No aplica</td>
+                <td><center>No aplica</center></td>
                 <td>Listing fue una etiqueta similar a **pre** o **code**, es decir, se utilizaba para insertar codigo y que no fuera interpretado, sino estilizado visualmente. 
                     El elemento HTML XMP &lt;xmp&gt; dibuja texto entre las etiquetas de inicio y fin sin interpretar el HTML que se encuentra en medio y lo muestra usando un tipo de letra monoespaciada"</td>
                 <td>&lt;pre&gt; &lt;code&gt;</td>
@@ -108,7 +108,7 @@
             <tr>
                 <td>Jershon Orlando Espitia Rey</td>
                 <td>&lt;noembed&gt;</td>
-                <td>No aplica</td>
+                <td><center>No aplica</center></td>
                 <td>El elemento HTML <&lt;noembed&gt; es una forma obsoleta y no estándar de proporcionar contenido alternativo para navegadores que no admiten el elemento &lt;embed&gt; o no admiten el tipo de contenido incrustado que un autor desea usar. El Elemento HTML Embed ( &lt;embed&gt; ) representa un punto de integración para una aplicación externa o de contenido interactivo.</td>
                 <td>&lt;object&gt;</td>
                 <td><img src="resources/noembed.png" alt="noembed.png"></td>
@@ -117,7 +117,7 @@
             <tr>
                 <td>Juan David Guiza Garcia</td>
                 <td>&lt;basefont&gt;</td>
-                <td>No aplica</td>
+                <td><center>No aplica</center></td>
                 <td>Es una etiqueta que se usaba con la finalidad de darle estilo a los textos no es reconmendable ni se usa en la actualidad</td>
                 <td>hojas de estilo;</td>
                 <td><img src="resources/hojasestilo.png" alt="hojasestilo.png"></td>
