Inicio de Pagina

--- a/Excel Adaptacion_v1/excel.html
+++ b/Excel Adaptacion_v1/excel.html
@@ -42,7 +42,7 @@
                 <td>&lt;bgsound&gt;</td>
                 <td><center>No aplica</center></td>
                 <td>Incorpora sonidos de fondo que se ejecuta cuando se entra a la pagina. Solo es interpretada por Internet Explorer. Acepta formatos Mp3, MID, AU y WAV. <audio> No se reproduce solo, se necesita que el usuario oprima play con el controls que se agrega a la etiqueta y  pasa con el preload y que cargue el archivo de audio.</td>
-                <td>&lt;audio&gt, No funciona sin atributos de control, controls, autoplay y preload.</td>
+                <gfdbgrfbtd>&lt;audio&gt, No funciona sin atributos de control, controls, autoplay y preload.</td>
                 <td><img src="resources/audio.png" alt="audio.img"></td>
             </tr>
 
