--- a/Excel Adaptacion_v1/NuevaFila.html
+++ b/Excel Adaptacion_v1/NuevaFila.html
@@ -1,8 +1,11 @@
- <tr>
+ <!-- <tr>
     <td></td>
     <td>&lt;&gt;</td>
     <td>No aplica</td>
     <td></td>
     <td>&lt;&gt;</td>
     <td><img src="resources/.png" alt=".png"></td>
-</tr>
+</tr> -->
+
+<video controls autoplay loop>
+    <source src="resources/videoP
