Inicios de pagina Web (Header, Nav)

--- a/ProyectoV1/index.html
+++ b/ProyectoV1/index.html
@@ -3,9 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="resources/Iconfav.png" type="image/x-icon">
-    link
+    <!--LINKS-->
+        <!--IconTab-->
+        <link rel="shortcut icon" href="resources/Iconfav.png" type="image/x-icon">
+        <!--IconsLibrery-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <title>Mortal Kombat Site</title>
 </head>
-<body >
+<body>
+
+</body>
+
+    <div class="head">
+
+        <div class="logo">
+            <a href="#">Logo</a>
+        </div>
+
+        <nav class="navbar">
+            <a href="#">Inicio</a>
+            <a href="#">Campeones</a>
+            <a href="#">Juegos</a>
+            <a href="#">Fatality</a>
+        </nav>
+    </div>
+
+    <header class="content header">
+        <h2 class="title">Inicio</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, facere! Aliquid incidunt animi culpa veritatis architecto deleniti excepturi impedit sit? Perspiciatis pariatur nostrum alias ut animi eveniet quasi repellendus. Debitis.
+        </p>
+
+        <div class="btn-home">
+            <a href="#" class="btn">Saber mas</a>
+            <a href="#" class="btn">Saber mas</a>
+        </div>
+    </header>
+
+    <section class="content new">
+        <h2 class="title"></h2>
+    </section>
+
 </html>
