--- a/ProyectoV1/index.html
+++ b/ProyectoV1/index.html
@@ -17,31 +17,34 @@
     <div class="head">
 
         <div class="logo">
-            <a href="#">Logo</a>
+            <a href="#" class="logo" >Logo</a>
+            <input type="checkbox" id="menu">
+
         </div>
 
         <nav class="navbar">
-            <a href="#">Inicio</a>
-            <a href="#">Campeones</a>
-            <a href="#">Juegos</a>
-            <a href="#">Fatality</a>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Campeones</a></li>
+            <li><a href="#">Juegos</a></li>
+            <li><a href="#">Fatalities</a></li>
         </nav>
     </div>
 
-    <header class="content header">
-        <h2 class="title">Inicio</h2>
-        <p>
+    <header class="header-content contain">
+
+        <h2 class="title">Mortal Kombat Games</h2>
+            <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, facere! Aliquid incidunt animi culpa veritatis architecto deleniti excepturi impedit sit? Perspiciatis pariatur nostrum alias ut animi eveniet quasi repellendus. Debitis.
-        </p>
+            </p>
+        
 
         <div class="btn-home">
-            <a href="#" class="btn">Saber mas</a>
-            <a href="#" class="btn">Saber mas</a>
+            <a href="#" class="btn">Pagina principal</a>
         </div>
     </header>
 
     <section class="content new">
-        <h2 class="title"></h2>
+        
     </section>
 
 </html>
